--- a/package.json
+++ b/package.json
@@ -15,12 +15,23 @@
     "dash": true
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.3.1",
+    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@tailwindcss/vite": "^4.1.6",
     "@tanstack/react-query": "^5.75.7",
     "autoprefixer": "^10.4.21",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "hono": "4.7.7",
+    "lucide-react": "^0.509.0",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.6",
     "wouter": "^3.7.0"
   },
@@ -28,7 +39,7 @@
     "@cloudflare/vite-plugin": "1.0.8",
     "@eslint/js": "9.25.1",
     "@tailwindcss/forms": "^0.5.10",
-    "@types/node": "22.14.1",
+    "@types/node": "^22.14.1",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "@vitejs/plugin-react": "4.4.1",
@@ -36,6 +47,7 @@
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.19",
     "globals": "15.15.0",
+    "tw-animate-css": "^1.2.9",
     "typescript": "5.8.3",
     "typescript-eslint": "8.31.0",
     "vite": "6.3.2",
